--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1"
   },
   "name": "backend",
@@ -11,7 +14,7 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon --esm src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +23,7 @@
   "type": "module",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/mysql": "^2.15.24",
     "@types/node": "^20.10.5",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
