--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "sourceMap": true,
     "outDir": "dist",
     "esModuleInterop": true,
+    "removeComments": true
   },
   "include": ["src/**/*"]
 }
