--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.0",
     "multer": "^1.4.5-lts.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "ws": "^8.16.0"
   },
   "name": "backend",
   "version": "1.0.0",
@@ -27,6 +28,7 @@
     "@types/express": "^4.17.21",
     "@types/mysql": "^2.15.24",
     "@types/node": "^20.10.5",
+    "@types/ws": "^8.5.10",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
