--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "moment": "^2.30.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "query-string": "^8.1.0",
     "ws": "^8.16.0"
   },
   "name": "backend",
